# EGH400-2

./: .gitmodules  README.md
install/: local_setup.sh  setup.sh
install/control_demo/share/control_demo/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/d_star_lite/share/d_star_lite/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/offboard_control/lib/offboard_control/: UAV_control
install/offboard_control/share/offboard_control/: package.dsv  package.ps1  package.sh  package.xml
install/offboard_control/share/offboard_control/launch/: UAV_control_launch.py
install/px4_msgs/share/px4_msgs/: local_setup.sh  package.sh
install/px4_msgs/share/px4_msgs/cmake/: export_px4_msgs__rosidl_generator_cppExport.cmake  export_px4_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  px4_msgs__rosidl_typesupport_cppExport.cmake  px4_msgs__rosidl_typesupport_introspection_cExport.cmake  px4_msgs__rosidl_typesupport_introspection_cppExport.cmake
install/px4_msgs/share/px4_msgs/msg/: EstimatorStatusFlags.json  Mission.json  VehicleOpticalFlowVel.json
install/px4_ros_com/lib/px4_ros_com/: debug_vect_advertiser  offboard_control  sensor_combined_listener  vehicle_gps_position_listener
install/px4_ros_com/share/px4_ros_com/: local_setup.sh  package.sh
log/: latest_build
src/offboard_control/: package.xml  setup.py
src/offboard_control/launch/: UAV_control_launch  UAV_single_launch.py
src/offboard_control/offboard_control/: UAV_control.py  obstacle_locations.py
(+405 files in other folders)
